--- a/Tarea_2.ipynb
+++ b/Tarea_2.ipynb
@@ -28,6 +28,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cargamos las librerías"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -51,6 +58,7 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "from torch import optim\n",
     "import torch.nn.functional as F\n",
     "\n",
     "# Se asigna un valor de reproductibilidad\n",
@@ -74,6 +82,13 @@
     "from torchvision import transforms\n",
     "import torchvision.datasets as datasets\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Procedemos a hacer funciones y tranformaciones para imágenes."
    ]
   },
   {
@@ -113,31 +128,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Probamos SKImage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from skimage.io import imread,imread_collection, imshow\n",
     "from skimage import exposure\n",
-    "import skimage.transform\n",
-    "\n",
+    "import skimage.transform"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con sus respectivos loaders y transformaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def loader_ski(path):\n",
-    "    ''' Cargar la Imagen '''\n",
+    "    ''' Cargar la imagen.\n",
+    "    '''\n",
     "    Img = imread(path)\n",
-    "    ''' Verificar si tiene 3 canales '''\n",
+    "    # Verificar si tiene 3 canales.\n",
     "    if len(Img.shape) == 2: \n",
     "        Img = skimage.color.gray2rgb(Img)\n",
     "    return Img\n",
     "\n",
-    "''' Funcion para Voltear la imagen '''\n",
     "def h_flip(Img):\n",
+    "    ''' Funcion para voltear la imagen.\n",
+    "    '''\n",
     "    azar = np.random.randint(0,2)\n",
     "    if azar == 1:\n",
     "        return np.fliplr(Img)\n",
     "    return Img\n",
-    "''' Funcion para multiplicar los pixeles del brillo '''\n",
+    "\n",
     "def f_brillo(array):\n",
+    "    ''' Funcion para multiplicar los pixeles del brillo.\n",
+    "    '''\n",
     "    return np.array([np.array([x*np.random.uniform(1.2,1.5) for x in y]) for y in array])\n",
     "\n",
     "''' Transformaciones para el conjunto de entramiento '''\n",
@@ -177,8 +217,8 @@
    },
    "outputs": [],
    "source": [
-    "''' Funcion para mostrar las imagenes (al azar) luego de las transformaciones '''\n",
     "def mostrar_imagenes(m=4, tipo='train',modo = 'PIL'):\n",
+    "    ''' Funcion para mostrar las imagenes (al azar) luego de las transformaciones. '''\n",
     "    fig, ax = plt.subplots(1, m, figsize=(15, 8))\n",
     "    for i in range(m):\n",
     "        if tipo == 'train':\n",
@@ -204,13 +244,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PIL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-08T13:52:24.567771Z",
      "start_time": "2020-07-08T13:52:20.449782Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -253,7 +301,6 @@
     }
    ],
    "source": [
-    "'''PIL'''\n",
     "print('TRAIN')\n",
     "mostrar_imagenes(5)\n",
     "print('TEST')\n",
@@ -592,7 +639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## parte 4"
+    "## Parte 4"
    ]
   },
   {
@@ -609,9 +656,9 @@
     "from torch.utils.data import DataLoader,RandomSampler\n",
     "from torch.utils.data.sampler import SubsetRandomSampler\n",
     "\n",
-    "train_DL = DataLoader(data_train, batch_size=16,sampler = SubsetRandomSampler(torch.from_numpy(index_X_train)))\n",
-    "val_DL = DataLoader(data_train, batch_size=16,sampler = Sam)\n",
-    "test_DL = DataLoader(data_test, batch_size=16,sampler = RandomSampler(data_test))"
+    "train_dl = DataLoader(data_train, batch_size=16,sampler = SubsetRandomSampler(torch.from_numpy(index_X_train)))\n",
+    "val_dl = DataLoader(data_train, batch_size=16,sampler = Sam)\n",
+    "test_dl = DataLoader(data_test, batch_size=16,sampler = RandomSampler(data_test))"
    ]
   },
   {
@@ -620,8 +667,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Funcion para estudiar el tiempo que demora en sacar una muestra para distintos numero de workers '''\n",
     "def tiempo_num_workers(n,tipo = 'train'):\n",
+    "    ''' Funcion para estudiar el tiempo que demora en sacar una muestra para distintos numero de workers. '''\n",
     "    if tipo == 'train':\n",
     "        DL = DataLoader(data_train, batch_size=16,sampler = SubsetRandomSampler(torch.from_numpy(index_X_train)),num_workers = n)\n",
     "    if tipo == 'val':\n",
@@ -712,6 +759,7 @@
    "outputs": [],
    "source": [
     "class DWSepConv2d(nn.Module):\n",
+    "    ''' Clase que implementa Dephtwise Separable Convolution.'''\n",
     "    def __init__(self, in_channels, out_channels, kernel_size, padding, bias=True):\n",
     "        super().__init__()\n",
     "        self.depthwise = nn.Conv2d(in_channels, in_channels, kernel_size=kernel_size,\n",
@@ -726,6 +774,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ocupamos la clase anterior para hacer la red convolucional."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
@@ -736,7 +791,9 @@
    },
    "outputs": [],
    "source": [
-    "class VGG16DWSep():\n",
+    "class VGG16DWSep(nn.Module):\n",
+    "    ''' Red convolucional profunda.\n",
+    "    '''\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.conv1 = nn.Conv2d(3, 64, kernel_size=3, stride=1, padding=1)\n",
@@ -797,6 +854,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Probamos una imagen"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 118,
    "metadata": {
@@ -818,7 +882,6 @@
     }
    ],
    "source": [
-    "# Testeo \n",
     "model = VGG16DWSep()\n",
     "model.forward(data_train[0][0])"
    ]
@@ -864,7 +927,19 @@
    ],
    "source": [
     "from torchvision import models\n",
-    "model_vgg16 = models.vgg16(pretrained=True)"
+    "model_vgg16 = models.vgg16(pretrained=True, progress=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-08T21:02:27.216071Z",
+     "start_time": "2020-07-08T21:02:27.211086Z"
+    }
+   },
+   "source": [
+    "Congelamos las capas"
    ]
   },
   {
@@ -879,85 +954,32 @@
    "outputs": [],
    "source": [
     "weight_layer1, weight_layer2 = model_vgg16.features[0].weight, model_vgg16.features[2].weight\n",
-    "\n",
-    "# Congelamos las capas\n",
     "weight_layer1.requires_grad, weight_layer2.requires_grad = False, False"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fijamos las primeras capas de VVG16 a nuestro modelo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-07-08T21:28:19.596321Z",
-     "start_time": "2020-07-08T21:28:19.557424Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "class VGG16DWSep():\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.pool = nn.MaxPool2d(kernel_size = 2, stride=2)\n",
-    "        \n",
-    "        #  Capas modificadas\n",
-    "        self.conv1 = nn.Conv2d(3, 64, kernel_size=3, stride=1, padding=1)\n",
-    "        self.conv1.weight = weight_layer1\n",
-    "        \n",
-    "        self.conv2 = nn.Conv2d(64, 64, kernel_size=3, stride=1, padding=1)\n",
-    "        self.conv1.weight = weight_layer2\n",
-    "        # Pooling layer\n",
-    "        self.pool = nn.MaxPool2d(kernel_size = 2, stride=2)\n",
-    "        \n",
-    "        self.dwsep1 = DWSepConv2d(64,128,kernel_size = 3, padding = 1)\n",
-    "        self.dwsep2 = DWSepConv2d(128,128,kernel_size = 3, padding = 1)\n",
-    "\n",
-    "        self.dwsep3 = DWSepConv2d(128,256,kernel_size = 3, padding = 1)\n",
-    "        self.bn1 = nn.BatchNorm2d(256)\n",
-    "        self.dwsep4 = DWSepConv2d(256,256,kernel_size = 3, padding = 1)\n",
-    "        self.bn2 = nn.BatchNorm2d(256)\n",
-    "        self.dwsep5 = DWSepConv2d(256,256,kernel_size = 3, padding = 1)\n",
-    "        self.mp3 = nn.MaxPool2d(kernel_size = 2, stride=2)\n",
-    "        self.dwsep6 = DWSepConv2d(256,512,kernel_size = 3, padding = 1)\n",
-    "        self.bn3 = nn.BatchNorm2d(512)\n",
-    "        self.dwsep7 = DWSepConv2d(512,512,kernel_size = 3, padding = 1)\n",
-    "        self.bn4 = nn.BatchNorm2d(512)\n",
-    "        self.dwsep8 = DWSepConv2d(512,512,kernel_size = 3, padding = 1)\n",
-    "        \n",
-    "        self.flat = nn.Flatten()\n",
-    "        self.lin1 = nn.Linear(512*49*4,1024)\n",
-    "        self.do1 = nn.Dropout(p=0.7)\n",
-    "        self.lin2 = nn.Linear(1024,512)\n",
-    "        self.do2 = nn.Dropout(p=0.5)\n",
-    "        self.out = nn.Linear(512,2)\n",
-    "        \n",
-    "    def forward(self,x):\n",
-    "        x = x.view(-1,3,224,224)\n",
-    "        x = F.relu(self.conv1(x))\n",
-    "        x = F.relu(self.conv2(x))\n",
-    "        x = self.pool(x)\n",
-    "        x = F.relu(self.dwsep1(x))\n",
-    "        x = F.relu(self.dwsep2(x))\n",
-    "        x = self.pool(x)\n",
-    "        x = F.relu(self.dwsep3(x))\n",
-    "        x = F.relu(self.bn1(x))\n",
-    "        x = F.relu(self.dwsep4(x))\n",
-    "        x = F.relu(self.bn2(x))\n",
-    "        x = F.relu(self.dwsep5(x))\n",
-    "        x = self.pool(x)\n",
-    "        x = F.relu(self.dwsep6(x))\n",
-    "        x = F.relu(self.bn3(x))\n",
-    "        x = F.relu(self.dwsep7(x))\n",
-    "        x = F.relu(self.bn4(x))\n",
-    "        x = F.relu(self.dwsep8(x))\n",
-    "        x = self.pool(x)\n",
-    "        x = self.flat(x)\n",
-    "        x = F.relu(self.lin1(x))\n",
-    "        x = self.do1(x)\n",
-    "        x = F.relu(self.lin2(x))\n",
-    "        x = self.do2(x)\n",
-    "        x = F.relu(self.out(x))\n",
-    "        return x.view(-1, x.size(1))"
+    "with torch.no_grad():\n",
+    "    model.conv1.weight.copy_(model_vgg16.features[0].weight)\n",
+    "    model.conv2.weight.copy_(model_vgg16.features[2].weight)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se realiza la clase EarlyStopping"
    ]
   },
   {
@@ -972,7 +994,11 @@
    "outputs": [],
    "source": [
     "class EarlyStopping():\n",
+    "    ''' Clase para detener el entrenamiento.\n",
+    "    '''\n",
     "    def __init__(self, modo='min', paciencia=5, porcentaje=False, tol=0):\n",
+    "        '''Parámetros auto-explicativos.\n",
+    "        '''\n",
     "        self.modo = modo\n",
     "        self.paciencia = paciencia\n",
     "        self.porcentaje = porcentaje\n",
@@ -982,13 +1008,26 @@
     "\n",
     "    def mejor(self, metrica_validacion):\n",
     "        '''\n",
-    "        Retorna True si metrica_validacion es mejor que la observación.\n",
+    "        Método que retorna True si metrica_validacion es mejor que la observación.\n",
+    "        \n",
+    "        Dependiendo de los parámetros entregados al iniciar la clase, compara\n",
+    "        metrica_validacion con la observación.\n",
+    "        \n",
+    "        Args:\n",
+    "        ----------\n",
+    "\n",
+    "        metrica_validacion: Float\n",
+    "        \n",
+    "        Returns: bool\n",
+    "            True si metrica_validacion es mejor que la observación, False si no.\n",
     "        '''\n",
+    "        \n",
+    "        \n",
     "        if self.observacion is None:\n",
     "            self.observacion = metrica_validacion\n",
     "            self.epocas = 1\n",
     "            return True\n",
-    "\n",
+    "        \n",
     "        diferencia = metrica_validacion - self.observacion\n",
     "        cuociente = metrica_validacion/self.observacion\n",
     "\n",
@@ -1023,10 +1062,179 @@
     "                return False\n",
     "\n",
     "    def deberia_parar(self, metrica_validacion):\n",
+    "        ''' Método que decide si algoritmo se detiene.\n",
+    "        \n",
+    "        Args:\n",
+    "        ----------\n",
+    "        metrica_validacion: Float\n",
+    "        \n",
+    "        Returns: bool\n",
+    "            Decide si parar dependiendo de cuantas épocas han pasado.\n",
+    "        '''\n",
     "        # Si estoy al límite y no mejoré\n",
     "        if self.epocas == self.paciencia and not mejor(self, metrica_validacion):\n",
     "            return True\n",
     "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Función para entrenar el modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(epochs, model, loss_func, optimizer, train_dl, valid_dl):\n",
+    "    ''' Funcion que entrena el modelo.\n",
+    "    \n",
+    "    Args:\n",
+    "    ----------\n",
+    "\n",
+    "    epochs: Int\n",
+    "        Épocas para entrenar el modelo.\n",
+    "    \n",
+    "    model: torchvision.model\n",
+    "        Modelo a entrenar.\n",
+    "        \n",
+    "    loss_func: function\n",
+    "        Función de perdida.\n",
+    "        \n",
+    "    optimizer: torch.optim\n",
+    "        Algoritmo de optimización.\n",
+    "    \n",
+    "    train_dl: torch.utils.data.dataloader.DataLoader\n",
+    "        DataLoader de entrenamiento.\n",
+    "    \n",
+    "    valid_dl: torch.utils.data.dataloader.DataLoader\n",
+    "        DataLoader de validación.\n",
+    "        \n",
+    "    Returns: Accuracy (list), F1-score (list), model\n",
+    "        Regresa la presición, F1-score y el modelo entrenado.\n",
+    "        \n",
+    "    '''\n",
+    "    instancia = EarlyStopping()\n",
+    "    f1_score = []\n",
+    "    accuracy = []\n",
+    "    \n",
+    "    print('Cambiando a GPU...')\n",
+    "    model.cuda()\n",
+    "    print('... Done')\n",
+    "\n",
+    "    for epoch in range(epochs):\n",
+    "        train_loss = 0.0\n",
+    "        target_true = 0.0\n",
+    "        predicted_true = 0.0\n",
+    "        correct_true = 0.0\n",
+    "        f1 = 0.0\n",
+    "        \n",
+    "        print('Empezamos el entrenamiento...')\n",
+    "        \n",
+    "        # Ciclo de entrenamiento\n",
+    "        for i, (data, target) in enumerate(train_dl):\n",
+    "            # Pasamos a GPU\n",
+    "            data, target = data.cuda(), target.long().cuda()\n",
+    "            \n",
+    "            # Limpiamos los gradientes\n",
+    "            optimizer.zero_grad()\n",
+    "            data = data.unsqueeze(0)\n",
+    "            output = model(data)\n",
+    "\n",
+    "             # Loss y backpropagation de los gradientes\n",
+    "            loss = loss_func(output.cuda(), target)\n",
+    "            loss.backward()\n",
+    "            \n",
+    "            # Actualizamos los parámetros\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            train_loss += loss.item() * data.size(0)\n",
+    "\n",
+    "            # F1-score\n",
+    "            '''\n",
+    "            predicted_classes = torch.argmax(output, dim=1) == 0\n",
+    "            target_classes = target.argmax()\n",
+    "            target_true += torch.sum(target_classes == 0).float()\n",
+    "            predicted_true += torch.sum(predicted_classes).float()\n",
+    "            correct_true += torch.sum(\n",
+    "                predicted_classes == (target_classes * predicted_classes == target_classes)).float()\n",
+    "            '''\n",
+    "\n",
+    "        print('Ciclo de validación...')\n",
+    "        \n",
+    "        # Ciclo de validación\n",
+    "        bien_clasificados = 0\n",
+    "        total = 0\n",
+    "        for i, (data, target) in enumerate(valid_dl):\n",
+    "            data, target = data.cuda(), target.cuda()\n",
+    "            outputs = model(data)\n",
+    "            total += len(target)\n",
+    "            bien_clasificados += (torch.argmax(outputs, dim=1) == target).float().sum()\n",
+    "    \n",
+    "        metrica_validacion = 100 * bien_clasificados / total\n",
+    "        metrica_validacion = metrica_validacion.item()\n",
+    "        accuracy.append(metrica_validacion)\n",
+    "        '''\n",
+    "        recall = correct_true / target_true\n",
+    "        precision = correct_true / predicted_true\n",
+    "        f1 = 2 * precision * recall / (precision + recall)\n",
+    "        f1_score.append(f1)\n",
+    "        '''\n",
+    "        print('Epoca: ', epoch, ', Validation accuracy: ', metrica_validacion, \", Training loss: \", train_loss, \", F1-score\", f1)\n",
+    "        \n",
+    "        # Aplicamos EarlyStopping si debemos detenernos\n",
+    "        if instancia.deberia_parar(metrica_validacion):\n",
+    "            print('Early Stopping! Se detiene en la iteración', epoch)\n",
+    "            break\n",
+    "        \n",
+    "    return f1_score, accuracy, model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 20\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-4, weight_decay=1e-5)\n",
+    "loss_func = F.cross_entropy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entrenamos el modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#f1_score, accuracy, modelo = train(epochs, model, loss_func, optimizer, train_dl, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Guardamos los pesos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(modelo.state_dict(),'weights.h5')"
    ]
   }
  ],
