Se termina el testeo del modelo

--- a/Tarea_2.ipynb
+++ b/Tarea_2.ipynb
@@ -740,6 +740,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Arquitectura"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "El objetivo de esta secci´on es construir una red neuronal profunda para el problema de clasificaci´on de\n",
     "im´agenes de rayos X sobre neumon´ıa. Dicha red debe ser implementada en Pytorch.\n",
     "Se implementa un tipo de capa de convoluci´on conocida como Dephtwise Separable Convolution [2]. Esta\n",
@@ -916,6 +923,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cargamos el modelo ya entrenado VGG16"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -1008,7 +1022,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se realiza la clase EarlyStopping"
+    "## EarlyStopping y entrenamiento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se implementa la clase EarlyStopping"
    ]
   },
   {
@@ -1119,6 +1140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
     "def train(epochs, model, loss_func, optimizer, train_dl, valid_dl):\n",
     "    ''' Funcion que entrena el modelo.\n",
     "    \n",
@@ -1148,8 +1171,10 @@
     "        \n",
     "    '''\n",
     "    instancia = EarlyStopping()\n",
-    "    f1_score = []\n",
-    "    accuracy = []\n",
+    "    f1_scores = []\n",
+    "    val_accuracy = []\n",
+    "    train_accuracy = []\n",
+    "    train_loss_vect = []\n",
     "    \n",
     "    print('Cambiando a GPU...')\n",
     "    model.cuda()\n",
@@ -1157,14 +1182,16 @@
     "\n",
     "    for epoch in range(epochs):\n",
     "        train_loss = 0.0\n",
-    "        target_true = 0.0\n",
-    "        predicted_true = 0.0\n",
-    "        correct_true = 0.0\n",
     "        f1 = 0.0\n",
     "        \n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "\n",
+    "        targets = []\n",
+    "        outputs = []\n",
     "        print('Empezamos el entrenamiento...')\n",
     "        \n",
-    "        # Ciclo de entrenamiento\n",
+    "        # ciclo de entrenamiento\n",
     "        for i, (data, target) in enumerate(train_dl):\n",
     "            # Pasamos a GPU\n",
     "            data, target = data.cuda(), target.long().cuda()\n",
@@ -1172,55 +1199,60 @@
     "            # Limpiamos los gradientes\n",
     "            optimizer.zero_grad()\n",
     "            data = data.unsqueeze(0)\n",
+    "            \n",
     "            output = model(data)\n",
+    "            preds = torch.argmax(output, dim=1).cpu().numpy()\n",
     "\n",
-    "             # Loss y backpropagation de los gradientes\n",
+    "             # Loss\n",
     "            loss = loss_func(output.cuda(), target)\n",
     "            loss.backward()\n",
     "            \n",
-    "            # Actualizamos los parámetros\n",
+    "            # Actualizacion de parametros\n",
     "            optimizer.step()\n",
-    "\n",
+    "            \n",
+    "            # Guardar en historia para loss y F1\n",
     "            train_loss += loss.item() * data.size(0)\n",
+    "            outputs.append(preds)\n",
+    "            targets.append(target.data.to('cpu').numpy())\n",
     "\n",
-    "            # F1-score\n",
-    "            '''\n",
-    "            predicted_classes = torch.argmax(output, dim=1) == 0\n",
-    "            target_classes = target.argmax()\n",
-    "            target_true += torch.sum(target_classes == 0).float()\n",
-    "            predicted_true += torch.sum(predicted_classes).float()\n",
-    "            correct_true += torch.sum(\n",
-    "                predicted_classes == (target_classes * predicted_classes == target_classes)).float()\n",
-    "            '''\n",
-    "\n",
+    "            # Train accuracy\n",
+    "            correct += (torch.argmax(output, dim=1) == target).float().sum()\n",
+    "            total += len(target)\n",
+    "            \n",
+    "        # F1-score\n",
+    "        metrica_validacion_train = 100 * correct / total\n",
+    "        metrica_validacion_train = metrica_validacion_train.item()\n",
+    "        train_accuracy.append(metrica_validacion_train)\n",
+    "        \n",
+    "        # Guardamos historia\n",
+    "        f1 = f1_score(outputs, targets, average='samples')\n",
+    "        f1_scores.append(f1)\n",
+    "      \n",
     "        print('Ciclo de validación...')\n",
     "        \n",
-    "        # Ciclo de validación\n",
-    "        bien_clasificados = 0\n",
+    "        # Validación\n",
+    "        correct = 0\n",
     "        total = 0\n",
     "        for i, (data, target) in enumerate(valid_dl):\n",
     "            data, target = data.cuda(), target.cuda()\n",
-    "            outputs = model(data)\n",
+    "            output = model(data)\n",
+    "            correct += (torch.argmax(output, dim=1) == target).float().sum()\n",
     "            total += len(target)\n",
-    "            bien_clasificados += (torch.argmax(outputs, dim=1) == target).float().sum()\n",
     "    \n",
-    "        metrica_validacion = 100 * bien_clasificados / total\n",
+    "        metrica_validacion = 100 * correct / total\n",
     "        metrica_validacion = metrica_validacion.item()\n",
-    "        accuracy.append(metrica_validacion)\n",
-    "        '''\n",
-    "        recall = correct_true / target_true\n",
-    "        precision = correct_true / predicted_true\n",
-    "        f1 = 2 * precision * recall / (precision + recall)\n",
-    "        f1_score.append(f1)\n",
-    "        '''\n",
-    "        print('Epoca: ', epoch, ', Validation accuracy: ', metrica_validacion, \", Training loss: \", train_loss, \", F1-score\", f1)\n",
+    "        val_accuracy.append(metrica_validacion)\n",
+    "\n",
+    "        train_loss_vect.append(train_loss)\n",
     "        \n",
-    "        # Aplicamos EarlyStopping si debemos detenernos\n",
+    "        print('Epoca: ', epoch, ', Val-acc: ', metrica_validacion, \"Train-acc:\", metrica_validacion_train, \n",
+    "              \", Training loss: \", train_loss, \", F1-score\", f1)\n",
+    "        \n",
     "        if instancia.deberia_parar(metrica_validacion):\n",
-    "            print('Early Stopping! Se detiene en la iteración', epoch)\n",
+    "            print('Early Stopping!')\n",
     "            break\n",
     "        \n",
-    "    return f1_score, accuracy, model"
+    "    return f1_scores, train_accuracy, val_accuracy, train_loss_vect, model"
    ]
   },
   {
@@ -1229,7 +1261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 20\n",
+    "epochs = 10\n",
     "optimizer = optim.Adam(model.parameters(), lr=1e-4, weight_decay=1e-5)\n",
     "loss_func = F.cross_entropy"
    ]
@@ -1247,7 +1279,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#f1_score, accuracy, modelo = train(epochs, model, loss_func, optimizer, train_dl, valid_dl)"
+    "#f1_score, train_accuracy, val_accuracy,train_loss_vect, modelo = train(epochs, model,\n",
+    "#                                                                       loss_func, optimizer, train_dl, valid_dl)"
    ]
   },
   {
@@ -1264,6 +1297,86 @@
    "outputs": [],
    "source": [
     "torch.save(modelo.state_dict(),'weights.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prueba del modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_loss = 0.0\n",
+    "class_correct = list(0 for i in range(2))\n",
+    "class_total = list(0 for i in range(2))\n",
+    "classes = [0,1]\n",
+    "model.eval()\n",
+    "# iterate over test data\n",
+    "for data, target in test_dl:\n",
+    "    # Movemos tensores a GPU\n",
+    "    data, target = data.cuda(), target.cuda()\n",
+    "\n",
+    "    output = modelo(data)\n",
+    "    # Calculamos loss\n",
+    "    loss = loss_func(output, target)\n",
+    "\n",
+    "    # Actualizamos loss\n",
+    "    test_loss += loss.item()*data.size(0)\n",
+    "    \n",
+    "    # Convertimos a predicciones\n",
+    "    _, pred = torch.max(output, 1)\n",
+    "\n",
+    "    # Comparamos\n",
+    "    correct_tensor = pred.eq(target.data.view_as(pred))\n",
+    "    correct = np.squeeze(correct_tensor.cpu().numpy())\n",
+    "    \n",
+    "    # Calculamos el accuracy\n",
+    "    \n",
+    "    for i in range(4):       \n",
+    "        label = target.data[i]\n",
+    "        class_correct[label] += correct[i].item()\n",
+    "        class_total[label] += 1\n",
+    "\n",
+    "test_loss = test_loss/len(test_dl.dataset)\n",
+    "print('Test Loss:', test_loss)\n",
+    "\n",
+    "\n",
+    "print('Test Accuracy: %2d%% (%2d/%2d)' % (100. * np.sum(class_correct) / np.sum(class_total),\n",
+    "    np.sum(class_correct), np.sum(class_total)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random = np.random.randint(1000)\n",
+    "print(random)\n",
+    "prueba = modelo(data_test[random][0].cuda())\n",
+    "label_modelo = torch.argmax(prueba, dim=1).cpu().numpy()\n",
+    "\n",
+    "# Mostramos la imagen aleatoria\n",
+    "plt.imshow(data_test[random][0].permute(1,2,0))\n",
+    "plt.show()\n",
+    "\n",
+    "# Vemos la clasificación del modelo vs el label real\n",
+    "if label_modelo == [1]:\n",
+    "    label_modelo = 'PNEUMONIA'\n",
+    "else:\n",
+    "    label_modelo = 'NORMAL'\n",
+    "if data_test[random][1] == 1:\n",
+    "    label = 'PNEUMONIA'\n",
+    "else:\n",
+    "    label = 'NORMAL'\n",
+    "    \n",
+    "print('Predicción:', label_modelo, ', Label real:', label)"
    ]
   }
  ],
